@@ -1,6 +1,7 @@
 2012-04-04 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up to cleanup #35292: Cleanup in ext_tables.php
 	* Follow-up 3 to feature #34447: Add support for saltedpasswords and rsaauth
+	* Follow-up 4 to feature #34447: Move storage security to own class
 
 2012-04-03 Stanislas Rolland  <typo3@sjbr.ca>
 	* Add feature #27504: Add userGroupsPidList TS constant and TS setup property (Thanks to Georg Schönweger).
